--- a/FRONTEND/public/styles.css
+++ b/FRONTEND/public/styles.css
@@ -118,10 +118,6 @@ input {
   text-align: left;
 }
 
-.navbar {
-  height: 56px;
-}
-
 
 /* FONDO DE PANTALLA PAGINA PRINCIPAL*/
 
@@ -164,21 +160,46 @@ input {
   align-items: center;
 }
 
+/* NAVBAR */
+
+.navbar {
+  height: 56px;
+  transition: all 0.5s ;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.navbar .container {
+  display: flex;
+  justify-content: flex-start; /* Alinea el contenido a la izquierda en escritorio */
+  width: 100%;
+  padding-left: 0; /* Elimina padding para evitar márgenes extra */
+  padding-right: 0; /* Elimina padding para evitar márgenes extra */
+}
+
 .navbar.bg-transparent {
   background-color: rgba(255, 255, 255, 0) !important;
   box-shadow: none !important;
 }
 
-.navbar {
-transition: all 0.5s ;
-
-}
-
 .shadowbox_Navbar {
   padding: 30px;
   box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 3px 3px;
 }
+
+.logo-navbar {
+  max-height: 40px;
+  width: auto;
+  display: block;
+  margin-left: 20px;
+}
+
+
+
+/* FOOTER */
+
 
 .shadowbox_footer {
   padding: 30px;
@@ -220,12 +241,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.logo-navbar {
-  max-height: 40px;
-  width: auto;
-  display: block;
-  margin: 0 auto;
-}
 
 
 /* MEDIA QUERY PARA ADAPTAR LA PAGINA A CELULARES O TABLETS */
@@ -261,11 +276,24 @@ html {
   .flecha-svg {
     bottom: 100px; /* sube la flecha para que no quede tan baja */
   }
-    
+
+  .navbar {
+    justify-content: center; /* Centrado horizontal en dispositivos pequeños */
+  }
+
+  .navbar .container {
+    justify-content: center; /* Centrado horizontal del contenedor */
+  }
+
   .logo-navbar {
-      max-height: 30px;
+    max-height: 30px;
+    margin-left: 0; /* Quitar margen a la izquierda en dispositivos pequeños */
+    margin-right: 0; /* Asegurarse de que no haya margen a la derecha */
     }
 }
+
+
+
 
 /* MULTI-STEP PROGRESS BARM */
 .progressbar {
