se agregan textos descriptivos que van antes del formulario

--- a/FRONTEND/public/styles.css
+++ b/FRONTEND/public/styles.css
@@ -90,6 +90,18 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
 
+.parrafo-formal {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.6; /* Mejor legibilidad */
+  color: black;  /* Color de texto claro */
+  margin-bottom: 20px; /* Espaciado entre párrafos */
+  text-align: left; /* Alineación estándar para mayor claridad */
+  margin-left: 50px;   /* Margen a la izquierda */
+  margin-right: 50px;  /* Margen a la derecha */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
+
 
 
 
@@ -262,6 +274,10 @@ html {
   .subtitulo-formal {
     font-size: 1rem;
     white-space: normal; /* permite que se acomode a varias líneas */
+  }
+
+  .parrafo-formal {
+    font-size: 0.9rem; /* Ajuste de tamaño para pantallas pequeñas */
   }
 
   .form-container,
