--- a/FRONTEND/public/styles.css
+++ b/FRONTEND/public/styles.css
@@ -94,7 +94,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6; /* Mejor legibilidad */
-  color: black;  /* Color de texto claro */
+  color: #5a5a5c;  /* Color de texto claro */
   margin-bottom: 20px; /* Espaciado entre párrafos */
   text-align: left; /* Alineación estándar para mayor claridad */
   margin-left: 50px;   /* Margen a la izquierda */
