--- a/FRONTEND/public/styles.css
+++ b/FRONTEND/public/styles.css
@@ -318,17 +318,18 @@ html {
   position: relative;
   margin: 40px 0;
   counter-reset: step;
+  padding: 0 20px; /* para dar espacio lateral */
 }
 
 .progress-line {
   position: absolute;
   top: 15px;
-  left: 100px;
-  right: 100px;
+  left: 6rem;
+  right: 6rem;
   height: 4px;
   background-color: #28a745;
   z-index: 1;
-  width: 0%;
+  width: 0;
   transition: width 0.3s ease-in-out;
 }
 
@@ -336,8 +337,8 @@ html {
   content: "";
   position: absolute;
   top: 15px;
-  left: 100px;
-  right: 100px;
+  left: 6rem;
+  right: 6rem;
   height: 4px;
   background-color: #e0e0e0;
   z-index: 0;
@@ -350,8 +351,6 @@ html {
   flex: 1;
   z-index: 1;
 }
-
-
 
 .progress-step::before {
   content: counter(step);
