bordes rojos cuando hay algun error en el form.

--- a/FRONTEND/public/styles.css
+++ b/FRONTEND/public/styles.css
@@ -55,6 +55,10 @@ body {
   background-color: #5a6268;
 }
 
+input.error, select.error {
+  border: 2px solid red !important;
+}
+
 
 
 /* TEXTOS */
